--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "server" : "ts-node src/server/index.ts"
+    "server": "ts-node src/server/index.ts"
   },
   "dependencies": {
     "@types/cors": "2.8",
     "@types/express": "4.17",
+    "@types/lodash": "4.14",
     "@types/luxon": "^2.3.1",
+    "@types/marked": "^4.0.3",
     "bulma": "^0.9.4",
     "cors": "2.8",
     "express": "4.17",
+    "highlight.js": "11.5",
+    "lodash": "4.14",
     "luxon": "^2.3.1",
+    "marked": "^4.0.3",
     "pinia": "^2.1.7",
     "ts-node": "^10.9.2",
-    "vue": "^3.4.19"
+    "vue": "^3.4.19",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
